# RemCmd

./: Cargo.toml  THIRD_PARTY_NOTICES.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/remcmd-app/: Cargo.toml
crates/remcmd-app/src/: file_editor.rs  icons.rs  macos_symbols.rs  main.rs  pane_layout.rs  private_key_picker.rs  ssh_runtime.rs  terminal_canvas.rs  terminal_input.rs  terminal_view.rs  text_field.rs  theme.rs
crates/remcmd-core/: Cargo.toml
crates/remcmd-core/src/: lib.rs
crates/remcmd-ssh/: Cargo.toml
crates/remcmd-ssh/src/: auth.rs  connection.rs  error.rs  host_key.rs  lib.rs  session.rs  sftp.rs  shell.rs  shell_integration.rs  transport.rs
crates/remcmd-ssh/src/connection/: tests.rs
crates/remcmd-ssh/src/shell/: tests.rs
crates/remcmd-storage/: Cargo.toml
crates/remcmd-storage/src/: credentials.rs  lib.rs
crates/remcmd-terminal/: Cargo.toml
crates/remcmd-terminal/src/: cwd.rs  engine.rs  event.rs  lib.rs  screen.rs
