[workspace]
members = [
    "crates/remcmd-app",
    "crates/remcmd-core",
    "crates/remcmd-ssh",
    "crates/remcmd-storage",
    "crates/remcmd-terminal",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
gpui = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
remcmd-core = { path = "crates/remcmd-core"}
remcmd-storage = { path = "crates/remcmd-storage" }
