[package]
name = "remcmd-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpui.workspace = true
remcmd-core.workspace = true
remcmd-ssh.workspace = true
remcmd-storage.workspace = true
secrecy.workspace = true
tokio.workspace = true
unicode-segmentation = "1"
