[package]
name = "remcmd-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpui.workspace = true
remcmd-core.workspace = true
remcmd-ssh.workspace = true
remcmd-storage.workspace = true
remcmd-terminal.workspace = true
secrecy.workspace = true
tokio.workspace = true
unicode-segmentation = "1"

[target.'cfg(target_os = "macos")'.dependencies]
directories.workspace = true
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSApplication",
    "NSOpenPanel",
    "NSPanel",
    "NSResponder",
    "NSSavePanel",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSString",
    "NSURL",
] }

[dev-dependencies]
tempfile.workspace = true
