[package]
name = "remcmd-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
directories.workspace = true
remcmd-core.workspace = true
tokio.workspace = true
russh.workspace = true
secrecy.workspace = true

[dev-dependencies]
tempfile.workspace = true
rand.workspace = true
